--- a/csetting.ui
+++ b/csetting.ui
@@ -171,69 +171,12 @@
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="currentIndex">
-            <number>13</number>
+            <number>0</number>
            </property>
            <widget class="QWidget" name="stackedWidget_2Page1">
             <layout class="QVBoxLayout" name="verticalLayout_18">
              <item>
               <layout class="QGridLayout" name="gridLayout_2">
-               <item row="10" column="0">
-                <widget class="QCheckBox" name="cb_properMotion">
-                 <property name="text">
-                  <string>Show proper motion vector</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="12" column="0">
-                <widget class="QSpinBox" name="sb_pmYears">
-                 <property name="suffix">
-                  <string> year(s)</string>
-                 </property>
-                 <property name="minimum">
-                  <number>-2000</number>
-                 </property>
-                 <property name="maximum">
-                  <number>2000</number>
-                 </property>
-                 <property name="value">
-                  <number>250</number>
-                 </property>
-                </widget>
-               </item>
-               <item row="6" column="0">
-                <widget class="QCheckBox" name="checkBox_2">
-                 <property name="text">
-                  <string>Proper name priority</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="1" column="1">
-                <spacer name="horizontalSpacer_7">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item row="2" column="0">
-                <widget class="QLabel" name="label_2">
-                 <property name="text">
-                  <string>Show bayer letter from FOV</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="0">
-                <widget class="QLabel" name="label_3">
-                 <property name="text">
-                  <string>Show flamsteed number from FOV</string>
-                 </property>
-                </widget>
-               </item>
                <item row="1" column="0">
                 <widget class="QDoubleSpinBox" name="doubleSpinBox">
                  <property name="suffix">
@@ -250,58 +193,14 @@
                  </property>
                 </widget>
                </item>
-               <item row="5" column="2">
-                <widget class="CFontColorButton" name="pushButton_4">
+               <item row="6" column="0">
+                <widget class="QCheckBox" name="checkBox_2">
                  <property name="text">
-                  <string/>
+                  <string>Proper name priority</string>
                  </property>
                 </widget>
                </item>
-               <item row="7" column="0">
-                <widget class="QCheckBox" name="checkBox">
-                 <property name="text">
-                  <string>Bayer letter priority</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="9" column="0">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_30">
-                 <property name="decimals">
-                  <number>1</number>
-                 </property>
-                 <property name="minimum">
-                  <double>-5.000000000000000</double>
-                 </property>
-                 <property name="maximum">
-                  <double>5.000000000000000</double>
-                 </property>
-                 <property name="singleStep">
-                  <double>0.500000000000000</double>
-                 </property>
-                </widget>
-               </item>
-               <item row="8" column="0">
-                <widget class="QLabel" name="label_61">
-                 <property name="text">
-                  <string>Star size factor</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="2">
-                <widget class="QLabel" name="label_4">
-                 <property name="text">
-                  <string>Star bitmap</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="4" column="2">
-                <widget class="QLabel" name="label_5">
-                 <property name="text">
-                  <string>Proper name font &amp; color</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="7" column="2">
+               <item row="3" column="3">
                 <widget class="CFontColorButton" name="pushButton_5">
                  <property name="text">
                   <string/>
@@ -315,13 +214,51 @@
                  </property>
                 </widget>
                </item>
-               <item row="1" column="2">
-                <widget class="QComboBox" name="comboBox">
-                 <property name="iconSize">
+               <item row="7" column="0">
+                <widget class="QCheckBox" name="checkBox">
+                 <property name="text">
+                  <string>Bayer letter priority</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="19" column="0">
+                <spacer name="verticalSpacer_4">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
                   <size>
-                   <width>24</width>
-                   <height>24</height>
+                   <width>20</width>
+                   <height>40</height>
                   </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="0" column="3">
+                <widget class="QLabel" name="label_5">
+                 <property name="text">
+                  <string>Proper name font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="3">
+                <widget class="QLabel" name="label_6">
+                 <property name="text">
+                  <string>Bayer letter font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="9" column="0">
+                <widget class="QLabel" name="label_100">
+                 <property name="text">
+                  <string>Vector size</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="8" column="0">
+                <widget class="QCheckBox" name="cb_properMotion">
+                 <property name="text">
+                  <string>Show proper motion vector</string>
                  </property>
                 </widget>
                </item>
@@ -341,37 +278,17 @@
                  </property>
                 </widget>
                </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_2">
+                 <property name="text">
+                  <string>Show bayer letter from FOV</string>
+                 </property>
+                </widget>
+               </item>
                <item row="5" column="3">
-                <spacer name="horizontalSpacer_6">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item row="8" column="2">
-                <widget class="QLabel" name="label_7">
+                <widget class="CFontColorButton" name="pushButton_6">
                  <property name="text">
-                  <string>Flamsteed number font &amp; color</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="6" column="2">
-                <widget class="QLabel" name="label_6">
-                 <property name="text">
-                  <string>Bayer letter font &amp; color</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="2">
-                <widget class="QCheckBox" name="checkBox_3">
-                 <property name="text">
-                  <string>Use spectral color</string>
+                  <string/>
                  </property>
                 </widget>
                </item>
@@ -391,30 +308,178 @@
                  </property>
                 </widget>
                </item>
-               <item row="13" column="0">
-                <spacer name="verticalSpacer_4">
-                 <property name="orientation">
-                  <enum>Qt::Vertical</enum>
+               <item row="4" column="0">
+                <widget class="QLabel" name="label_3">
+                 <property name="text">
+                  <string>Show flamsteed number from FOV</string>
                  </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>20</width>
-                   <height>40</height>
-                  </size>
-                 </property>
-                </spacer>
+                </widget>
                </item>
-               <item row="9" column="2">
-                <widget class="CFontColorButton" name="pushButton_6">
+               <item row="4" column="3">
+                <widget class="QLabel" name="label_7">
+                 <property name="text">
+                  <string>Flamsteed number font &amp; color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="1" column="3">
+                <widget class="CFontColorButton" name="pushButton_4">
                  <property name="text">
                   <string/>
                  </property>
                 </widget>
                </item>
-               <item row="11" column="0">
-                <widget class="QLabel" name="label_100">
+               <item row="10" column="0">
+                <widget class="QSpinBox" name="sb_pmYears">
+                 <property name="suffix">
+                  <string> year(s)</string>
+                 </property>
+                 <property name="minimum">
+                  <number>-2000</number>
+                 </property>
+                 <property name="maximum">
+                  <number>2000</number>
+                 </property>
+                 <property name="singleStep">
+                  <number>10</number>
+                 </property>
+                 <property name="value">
+                  <number>250</number>
+                 </property>
+                </widget>
+               </item>
+               <item row="17" column="2">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_30">
+                 <property name="decimals">
+                  <number>1</number>
+                 </property>
+                 <property name="minimum">
+                  <double>-5.000000000000000</double>
+                 </property>
+                 <property name="maximum">
+                  <double>5.000000000000000</double>
+                 </property>
+                 <property name="singleStep">
+                  <double>0.500000000000000</double>
+                 </property>
+                </widget>
+               </item>
+               <item row="16" column="2">
+                <widget class="QLabel" name="label_61">
                  <property name="text">
-                  <string>Vector size</string>
+                  <string>Star size factor</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="17" column="1">
+                <widget class="QToolButton" name="toolButton_2">
+                 <property name="toolTip">
+                  <string>Show star bitmap</string>
+                 </property>
+                 <property name="text">
+                  <string>I</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="17" column="0">
+                <widget class="QComboBox" name="comboBox">
+                 <property name="iconSize">
+                  <size>
+                   <width>24</width>
+                   <height>24</height>
+                  </size>
+                 </property>
+                </widget>
+               </item>
+               <item row="16" column="0">
+                <widget class="QLabel" name="label_4">
+                 <property name="text">
+                  <string>Star bitmap</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="18" column="0" colspan="3">
+                <widget class="CStarExample" name="frame_2">
+                 <property name="minimumSize">
+                  <size>
+                   <width>300</width>
+                   <height>48</height>
+                  </size>
+                 </property>
+                 <property name="frameShape">
+                  <enum>QFrame::Panel</enum>
+                 </property>
+                 <property name="frameShadow">
+                  <enum>QFrame::Sunken</enum>
+                 </property>
+                </widget>
+               </item>
+               <item row="11" column="0">
+                <spacer name="verticalSpacer_13">
+                 <property name="orientation">
+                  <enum>Qt::Vertical</enum>
+                 </property>
+                 <property name="sizeType">
+                  <enum>QSizePolicy::Fixed</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>20</width>
+                   <height>8</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="17" column="5">
+                <spacer name="horizontalSpacer_6">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item row="16" column="3">
+                <widget class="QCheckBox" name="checkBox_3">
+                 <property name="text">
+                  <string>Use spectral color</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="12" column="0" colspan="6">
+                <widget class="Line" name="line_4">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                </widget>
+               </item>
+               <item row="16" column="4">
+                <widget class="QLabel" name="label_110">
+                 <property name="text">
+                  <string>Saturation</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="17" column="4">
+                <widget class="QSpinBox" name="spinBox_5">
+                 <property name="suffix">
+                  <string>%</string>
+                 </property>
+                 <property name="prefix">
+                  <string/>
+                 </property>
+                 <property name="maximum">
+                  <number>200</number>
+                 </property>
+                 <property name="singleStep">
+                  <number>10</number>
+                 </property>
+                 <property name="value">
+                  <number>100</number>
                  </property>
                 </widget>
                </item>
@@ -4708,6 +4773,12 @@
    <class>CFrameGradient</class>
    <extends>QFrame</extends>
    <header location="global">cframegradient.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>CStarExample</class>
+   <extends>QFrame</extends>
+   <header>cstarexample.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
