--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -852,7 +852,7 @@
         <number>1</number>
        </property>
        <property name="currentIndex">
-        <number>4</number>
+        <number>3</number>
        </property>
        <property name="tabSpacing">
         <number>6</number>
@@ -1851,43 +1851,24 @@
            <property name="sizeConstraint">
             <enum>QLayout::SetDefaultConstraint</enum>
            </property>
-           <item row="2" column="2">
-            <widget class="QPushButton" name="pushButton_25">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>38</width>
-               <height>38</height>
-              </size>
-             </property>
-             <property name="toolTip">
-              <string>Move map down</string>
+           <item row="0" column="5" rowspan="3">
+            <widget class="QLabel" name="labelInfo">
+             <property name="frameShape">
+              <enum>QFrame::StyledPanel</enum>
              </property>
              <property name="text">
-              <string/>
+              <string>RA</string>
              </property>
-             <property name="icon">
-              <iconset resource="resource.qrc">
-               <normaloff>:/res/arrow_down.png</normaloff>:/res/arrow_down.png</iconset>
+             <property name="alignment">
+              <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
              </property>
-             <property name="iconSize">
-              <size>
-               <width>32</width>
-               <height>32</height>
-              </size>
-             </property>
-             <property name="autoRepeat">
-              <bool>true</bool>
+             <property name="wordWrap">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
-           <item row="1" column="3">
-            <widget class="QPushButton" name="pushButton_26">
+           <item row="1" column="0">
+            <widget class="QPushButton" name="pushButton_24">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -1901,14 +1882,14 @@
               </size>
              </property>
              <property name="toolTip">
-              <string>Move map right</string>
+              <string>Move map left</string>
              </property>
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="resource.qrc">
-               <normaloff>:/res/arrow_right.png</normaloff>:/res/arrow_right.png</iconset>
+               <normaloff>:/res/arrow_left.png</normaloff>:/res/arrow_left.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -1956,6 +1937,22 @@
              </property>
             </widget>
            </item>
+           <item row="3" column="0">
+            <spacer name="verticalSpacer_8">
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeType">
+              <enum>QSizePolicy::Fixed</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>20</width>
+               <height>5</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
            <item row="2" column="4">
             <widget class="QPushButton" name="pushButton_29">
              <property name="sizePolicy">
@@ -1991,8 +1988,8 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="pushButton_24">
+           <item row="1" column="3">
+            <widget class="QPushButton" name="pushButton_26">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -2006,14 +2003,81 @@
               </size>
              </property>
              <property name="toolTip">
-              <string>Move map left</string>
+              <string>Move map right</string>
              </property>
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="resource.qrc">
-               <normaloff>:/res/arrow_left.png</normaloff>:/res/arrow_left.png</iconset>
+               <normaloff>:/res/arrow_right.png</normaloff>:/res/arrow_right.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+             <property name="autoRepeat">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="2">
+            <widget class="QPushButton" name="pushButton_33">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>38</width>
+               <height>38</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string>Reset rotation</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resource.qrc">
+               <normaloff>:/res/reset_icon.png</normaloff>:/res/reset_icon.png</iconset>
+             </property>
+             <property name="iconSize">
+              <size>
+               <width>32</width>
+               <height>32</height>
+              </size>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="3">
+            <widget class="QPushButton" name="pushButton_32">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximumSize">
+              <size>
+               <width>38</width>
+               <height>38</height>
+              </size>
+             </property>
+             <property name="toolTip">
+              <string>Rotale map right</string>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resource.qrc">
+               <normaloff>:/res/rotate_right.png</normaloff>:/res/rotate_right.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -2061,21 +2125,8 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="4">
-            <spacer name="horizontalSpacer_5">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item row="4" column="3">
-            <widget class="QPushButton" name="pushButton_32">
+           <item row="2" column="2">
+            <widget class="QPushButton" name="pushButton_25">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                <horstretch>0</horstretch>
@@ -2089,14 +2140,14 @@
               </size>
              </property>
              <property name="toolTip">
-              <string>Rotale map right</string>
+              <string>Move map down</string>
              </property>
              <property name="text">
               <string/>
              </property>
              <property name="icon">
               <iconset resource="resource.qrc">
-               <normaloff>:/res/rotate_right.png</normaloff>:/res/rotate_right.png</iconset>
+               <normaloff>:/res/arrow_down.png</normaloff>:/res/arrow_down.png</iconset>
              </property>
              <property name="iconSize">
               <size>
@@ -2106,38 +2157,6 @@
              </property>
              <property name="autoRepeat">
               <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="2">
-            <widget class="QPushButton" name="pushButton_33">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>38</width>
-               <height>38</height>
-              </size>
-             </property>
-             <property name="toolTip">
-              <string>Reset rotation</string>
-             </property>
-             <property name="text">
-              <string/>
-             </property>
-             <property name="icon">
-              <iconset resource="resource.qrc">
-               <normaloff>:/res/reset_icon.png</normaloff>:/res/reset_icon.png</iconset>
-             </property>
-             <property name="iconSize">
-              <size>
-               <width>32</width>
-               <height>32</height>
-              </size>
              </property>
             </widget>
            </item>
@@ -2176,18 +2195,15 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
-            <spacer name="verticalSpacer_8">
+           <item row="0" column="6">
+            <spacer name="horizontalSpacer_5">
              <property name="orientation">
-              <enum>Qt::Vertical</enum>
-             </property>
-             <property name="sizeType">
-              <enum>QSizePolicy::Fixed</enum>
+              <enum>Qt::Horizontal</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>20</width>
-               <height>5</height>
+               <width>40</width>
+               <height>20</height>
               </size>
              </property>
             </spacer>
