--- a/resource.qrc
+++ b/resource.qrc
@@ -122,5 +122,6 @@
         <file>res/ico_help.png</file>
         <file>res/star_glow.png</file>
         <file>res/ico_eq_axis.png</file>
+        <file>res/ico_adv_search.png</file>
     </qresource>
 </RCC>
